[project]
name = "comfyui-evtexture"
description = "Wrapper for EvTexture Video Upscaler: [a/https://github.com/DachunKai/EvTexture](https://github.com/DachunKai/EvTexture)"
version = "1.0.0"
dependencies = ["torch", "torchvision>=0.9.0"]

[project.urls]
Repository = "https://github.com/tocubed/ComfyUI-EvTexture"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "tocubed"
DisplayName = "ComfyUI-EvTexture"
Icon = ""